--- a/hall/hall.data.archive.yaml
+++ b/hall/hall.data.archive.yaml
@@ -43,17 +43,51 @@ data:
         - name: material_3
           empirical_formula: Ra
           thickness: 7500
-  measurement_geometry:
-    sample(Hexahedron):
-      is_hall_bar: false
-      edges: [(1e , 2cm), (2e, 5cm)]
-      surface: [(1s , 2cm*2cm), (2s, 5cm*5cm)]
-      vertices: [1v, 2v]
-    contacts:
-      placing_index: 1e
-      positioning: [central, left, right, coordinates]
-        coordinates: 1cm
-    contacts:
-      placing_index: 1s
-      positioning: [central, left, right, coordinates]
-        coordinates: (1cm, 3cm)
+        process_steps:
+          - name: Post-annealing
+            # timestamp:
+            elapsed_time: 1
+            process_type: Pre-process
+            comment: Was there a post-annealing step?
+            temperature: 470
+            atmosphere: Nitrogen
+            method: RTA
+          - name: Pre-treatment
+            # timestamp:
+            elapsed_time: 5
+            process_type: Pre-process
+            comment: | 
+              Was there a pre-treatment of the surface? 
+            temperature: 25
+            atmosphere: Nitrogen
+            method: |
+              Aqua regia cleaning for 5 min @ room temperature 
+              + rinsing in DI water
+            reagents:
+              - name: Acqua Regia
+          - name: implantation
+            # timestamp:
+            # elapsed_time: 1
+            process_type: Pre-process
+            comment: Was an implatation made for contact formation?
+            method: dose, duration, annealing
+          - name: regrowth
+            # timestamp:
+            # elapsed_time: 1
+            process_type: Process
+            comment: Was a regrowth made for contact formation?
+            method: growth, thickness, concentration, lift-off
+  # measurement_geometry:
+  #   sample:
+  #     GEOMETRY:
+    #     edges: [(1e , 2cm), (2e, 5cm)]
+    #     surface: [(1s , 2cm*2cm), (2s, 5cm*5cm)]
+    #     vertices: [1v, 2v]
+  #   contacts:
+  #     placing_index: 1e
+  #     positioning: [central, left, right, coordinates]
+  #       coordinates: 1cm
+  #   contacts:
+  #     placing_index: 1s
+  #     positioning: [central, left, right, coordinates]
+  #       coordinates: (1cm, 3cm)
