--- a/movpe_structured_example/movpe_app-def_data.archive.yaml
+++ b/movpe_structured_example/movpe_app-def_data.archive.yaml
@@ -1,23 +1,28 @@
 data:  
   m_def: ../upload/raw/movpe_app-def_schema.archive.yaml#MovpeSto_schema 
   users:
-    - role: Operator
-      name: Carlo
-      affiliation_institution: Leibniz Institut für Kristallzüchtung
-      affiliation_group: Model experiment
-      address:
-      email:
-      orcid:
-      telephone_number:
-    - role: Responsible_person
-      name: Giangi
-      affiliation_institution: HZB
-      affiliation_group: Quantum sensing
-      address:
-      email:
-      orcid:
-      telephone_number:
-    - name: Giovanna
+    not_nomad_user:
+    - first_name: a
+      last_name: a
+    - first_name: b
+      last_name: b
+    # - role: Operator
+    #   name: Carlo
+    #   affiliation_institution: Leibniz Institut für Kristallzüchtung
+    #   affiliation_group: Model experiment
+    #   address:
+    #   email:
+    #   orcid:
+    #   telephone_number:
+    # - role: Responsible_person
+    #   name: Giangi
+    #   affiliation_institution: HZB
+    #   affiliation_group: Quantum sensing
+    #   address:
+    #   email:
+    #   orcid:
+    #   telephone_number:
+    # - name: Giovanna
   # materials:
   #   precursor:
   #     comment: "the precursor is freshly prepared in the lab"
