--- a/IKZ_powder-samples/Einwaage.data.archive.yaml
+++ b/IKZ_powder-samples/Einwaage.data.archive.yaml
@@ -3,18 +3,31 @@ data:
   creation_date: 2022-07-05 10:00+01 #25.07.2022
   # created_by: ganschow
   execution_date: null
+  # created_by: Andrea
+  # created_by_test: Andrea
   executed_by: null
   final_sample: LiAlO2 #formula
   total_mass: 120.0
   notes: null
+  SampleID:
+    institute: IKZ
+    sample_owner: ganschow
+    creation_datetime: 2022-12-31
+    sample_short_name: mypowder
   components:
     - name: component_1 #component_1:
+      SampleID:
+        institute: IKZ
+        sample_owner: ganschow
+        creation_datetime: 2022-12-31
+        sample_short_name: mypowder
       formula: Li2CO3 #formula
-      chemicals: 
-        - "../upload/raw/Zinc_Selenide.archive.yaml#data"
+      chemicals: "../upload/raw/Zinc_Selenide.archive.yaml#data"
       target_mass: 67.254
       actual_mass: null
       notes: null
+      treatment:
+        - 
     - name: component_2  #component_2:
       formula: Al2O3 #formula
       target_mass: 92.803
