--- a/oxide_powder_preparation/Einwaage.data.archive.yaml
+++ b/oxide_powder_preparation/Einwaage.data.archive.yaml
@@ -26,8 +26,10 @@ data:
       target_mass: 67.254
       actual_mass: null
       notes: null
-      treatment:
-        - 
+      process:
+        process_steps:
+          - name: zioccan
+          - name: diozan
     - name: component_2  #component_2:
       formula: Al2O3 #formula
       target_mass: 92.803
