--- a/hall/hall.data.archive.yaml
+++ b/hall/hall.data.archive.yaml
@@ -12,7 +12,7 @@ data:
     not_nomad_user:
       first_name: aa
       last_name: bb
-    nomad_user: d350a114-e309-4602-9644-8d9f2ed75399
+    nomad_user: 5c87d4dd-5b6a-4759-9946-fff9bbd7cd44
     # - name: Andreas Fiedler 
     #   role: Operator
     #   affiliation_institution: Leibniz Institut für Kristallzüchtung
@@ -33,7 +33,7 @@ data:
       - method: experimental 
         epitaxy_type: Homoepitaxy
         thickness: 2.2
-        substrate:  "../upload/raw/Zinc_Selenide.archive.yaml#data"
+        substrate:  "../upload/raw/Selenium.archive.yaml#data"
     bulk:
       - epitaxy_type: Homoepitaxy
     contacts:
@@ -81,6 +81,8 @@ data:
             process_type: Process
             comment: Was a regrowth made for contact formation?
             method: growth, thickness, concentration, lift-off
+    giangiskan:
+      experiment_identifier: meicojoni
   # measurement_geometry:
   #   sample:
   #     GEOMETRY:
