--- a/hall/hall.data.archive.yaml
+++ b/hall/hall.data.archive.yaml
@@ -34,55 +34,55 @@ data:
         epitaxy_type: Homoepitaxy
         thickness: 2.2
         substrate:  "../upload/raw/Selenium.archive.yaml#data"
-    bulk:
-      - epitaxy_type: Homoepitaxy
+    # bulk:
+    #   - epitaxy_type: Homoepitaxy
     final_sample:
-      - sample_history:
-          - contacts_grafting:
-            - metal_stack: 
-              - name: material_1
-                empirical_formula: Ti
-                thickness: 50
-              - name: material_2
-                empirical_formula: Au
-                thickness: 100
-              - name: material_3
-                empirical_formula: Ra
-                thickness: 7500
-              process_steps:
-                - name: Post-annealing
-                  # timestamp:
-                  elapsed_time: 1
-                  process_type: Pre-process
-                  comment: Was there a post-annealing step?
-                  temperature: 470
-                  atmosphere: Nitrogen
-                  method: RTA
-                - name: Pre-treatment
-                  # timestamp:
-                  elapsed_time: 5
-                  process_type: Pre-process
-                  comment: | 
-                    Was there a pre-treatment of the surface? 
-                  temperature: 25
-                  atmosphere: Nitrogen
-                  method: |
-                    Aqua regia cleaning for 5 min @ room temperature 
-                    + rinsing in DI water
-                  reagents:
-                    - name: Acqua Regia
-                - name: implantation
-                  # timestamp:
-                  # elapsed_time: 1
-                  process_type: Pre-process
-                  comment: Was an implatation made for contact formation?
-                  method: dose, duration, annealing
-                - name: regrowth
-                  # timestamp:
-                  # elapsed_time: 1
-                  process_type: Process
-                  comment: Was a regrowth made for contact formation?
-                  method: growth, thickness, concentration, lift-off
+    - sample_history:
+      - contacts_grafting:
+        - metal_stack: 
+          - name: material_1
+            empirical_formula: Ti
+            thickness: 50
+          - name: material_2
+            empirical_formula: Au
+            thickness: 100
+          - name: material_3
+            empirical_formula: Ra
+            thickness: 7500
+          process_steps:
+            - name: Post-annealing
+              # timestamp:
+              elapsed_time: 1
+              process_type: Pre-process
+              comment: Was there a post-annealing step?
+              temperature: 470
+              atmosphere: Nitrogen
+              method: RTA
+            - name: Pre-treatment
+              # timestamp:
+              elapsed_time: 5
+              process_type: Pre-process
+              comment: | 
+                Was there a pre-treatment of the surface? 
+              temperature: 25
+              atmosphere: Nitrogen
+              method: |
+                Aqua regia cleaning for 5 min @ room temperature 
+                + rinsing in DI water
+              reagents:
+                - name: Acqua Regia
+            - name: implantation
+              # timestamp:
+              # elapsed_time: 1
+              process_type: Pre-process
+              comment: Was an implatation made for contact formation?
+              method: dose, duration, annealing
+            - name: regrowth
+              # timestamp:
+              # elapsed_time: 1
+              process_type: Process
+              comment: Was a regrowth made for contact formation?
+              method: growth, thickness, concentration, lift-off
   # measurement_geometry:
   #   sample:
   #     GEOMETRY:
