Sensors section for melt CZ

--- a/melt_czochralski_Dadzis/melt_czochralski.data.archive.yaml
+++ b/melt_czochralski_Dadzis/melt_czochralski.data.archive.yaml
@@ -9,102 +9,7 @@ data:
     sensors: #section name - not to be filled
       data_file: Melt_Cz_test.csv
       sensors_locations: sensor_geometry.png
-      TE_1_front_info: #section name - not to be filled
-        sensor_type: temperature_probes
-        sensor_description: "Temperature inside the crystal, 25 mm above melt"
-        sensor_alias: TE_1_front
-        channel: 101
-        measured_property: Temperature
-      TE_2_vessel_info: #section name - not to be filled
-        sensor_type: temperature_probes
-        sensor_description: "Temperature inside the crystal, 25 mm above melt"
-        sensor_alias: TE_1_front
-        channel: 101
-        measured_property: Temperature
-      TE_3_left_info: #section name - not to be filled
-        sensor_type: temperature_probes
-        sensor_description: "Temperature inside the crystal, 25 mm above melt"
-        sensor_alias: TE_1_front
-        channel: 101
-        measured_property: Temperature
-      TE_4_rear_info: #section name - not to be filled
-        sensor_type: temperature_probes
-        sensor_description: "Temperature inside the crystal, 25 mm above melt"
-        sensor_alias: TE_1_front
-        channel: 101
-        measured_property: Temperature
-      TE_5_right_info: #section name - not to be filled
-        sensor_type: temperature_probes
-        sensor_description: "Temperature inside the crystal, 25 mm above melt"
-        sensor_alias: TE_1_front
-        channel: 101
-        measured_property: Temperature
-      TE_HF_info: #section name - not to be filled
-        sensor_type: temperature_probes
-        sensor_description: "Temperature inside the crystal, 25 mm above melt"
-        sensor_alias: TE_1_front
-        channel: 101
-        measured_property: Temperature
-      TE_6_room_info: #section name - not to be filled
-        sensor_type: temperature_probes
-        sensor_description: "Temperature inside the crystal, 25 mm above melt"
-        sensor_alias: TE_1_front
-        channel: 101
-        measured_property: Temperature
-      TE_7_melt_info: #section name - not to be filled
-        sensor_type: temperature_probes
-        sensor_description: "Temperature inside the crystal, 25 mm above melt"
-        sensor_alias: TE_1_front
-        channel: 101
-        measured_property: Temperature
-      Rogowski_info: #section name - not to be filled
-        sensor_type: temperature_probes
-        sensor_description: "Temperature inside the crystal, 25 mm above melt"
-        sensor_alias: TE_1_front
-        channel: 101
-        measured_property: Temperature
-      PT_100_1_rear_info: #section name - not to be filled
-        sensor_type: temperature_probes
-        sensor_description: "Temperature inside the crystal, 25 mm above melt"
-        sensor_alias: TE_1_front
-        channel: 101
-        measured_property: Temperature
-      PT_1000_1_above_info: #section name - not to be filled
-        sensor_type: temperature_probes
-        sensor_description: "Temperature inside the crystal, 25 mm above melt"
-        sensor_alias: TE_1_front
-        channel: 101
-        measured_property: Temperature
-      Pyro_1_IGA_6_23_info:
-        sensor_type: pyrometer
-        sensor_description: "Crucible outside surface temperature at position of TE_1"
-        sensor_alias: Pyro-1-IGA-6-23
-        model: IGA 6/23
-        channel: 501
-        measured_property: Temperature
-        emission: 89
-        transmission: 100
-        t90: 0.01
-      Pyro_2_IGAR_6_info:
-        sensor_type: pyrometer
-        sensor_description: "Crucible outside surface temperature at position of TE_1"
-        sensor_alias: Pyro-1-IGA-6-23
-        model: IGA 6/23
-        channel: 501
-        measured_property: Temperature
-        emission: 89
-        transmission: 100
-        t90: 0.01
-      Pyro_h1_info:
-        sensor_type: pyrometer
-        sensor_description: "Crucible outside surface temperature at position of TE_1"
-        sensor_alias: Pyro-1-IGA-6-23
-        model: IGA 6/23
-        channel: 501
-        measured_property: Temperature
-        emission: 89
-        transmission: 100
-        t90: 0.01
+      sensors_list: ../upload/raw/Sensors.archive.yaml#data
   data_processing: #section name - not to be filled
     multimeter: Keithley
     software: multilog vXXX
