--- a/melt_czochralski_Dadzis/Sensors.archive.yaml
+++ b/melt_czochralski_Dadzis/Sensors.archive.yaml
@@ -39,7 +39,7 @@ definitions:
       sub_sections:
         temperature_sensor_1:
           section:
-            base_section: ../upload/raw/Sensor.schema.archive.yaml#Sensor  
+            base_section: ../upload/raw/base_classes/sensor_0-0-1.schema.archive.yaml#Sensor  
             quantities:
               value_log:  # The one we actually measurement
                 type: np.float64  # TODO try if that can be removed, it's already present in parent class
@@ -49,12 +49,12 @@ definitions:
                     name: TE_1_K air 155 mm over crucible
                 description: Time history of sensor readings. May differ from setpoint
               value_timestamp_rel: 
-                type: '#/definitions/section_definitions/0/quantities/0'
-              value_timestamp_abs:
                 type: '#/definitions/section_definitions/0/quantities/1'
+              value_timestamp_abs:
+                type: '#/definitions/section_definitions/0/quantities/2'
         pyrosensor_2:
           section:
-            base_section: ../upload/raw/Sensor.schema.archive.yaml#Sensor  
+            base_section: ../upload/raw/base_classes/sensor_0-0-1.schema.archive.yaml#Sensor  
             quantities:
               emission:
                 type: int
@@ -95,7 +95,8 @@ data:
     measured_property: your_field_here
     type: your_field_here
     notes: "TE_1_K air 155 mm over crucible"
-    value_timestamp_rel: '#/data/Sensors_list'
+    value_timestamp_rel: "#/data"
+    value_timestamp_abs: "#/data"
   pyrosensor_2:
     model: your_field_here
     name: your_field_here
